--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,3 +29,12 @@ main {
   --bs-nav-pills-link-active-color: #12100C;
   --bs-nav-pills-link-active-bg: #DB9F6A;
 }
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler-icon {
+  background-image: url('../images/navtogglericon.svg');
+  background-size: contain;
+}
