fixed accordion and stylized carousel

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,12 @@ body {
   font-family: "Raleway", Helvetica, sans-serif;
 }
 
-.display-4, .h1, .h2, .h3 {
+.display-4, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Sancreek", sans-serif;
+}
+
+.h2, h2 {
+  font-size: calc(1.8rem + 0.9vw);
 }
 
 main {
@@ -43,6 +47,7 @@ main {
   --bs-accordion-bg: none;
   --bs-accordion-color: white;
   --bs-accordion-border-color: none;
+  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
 }
 .accordion-body {
   border-bottom: rgba(255, 255, 255, 0.2) solid 2px;
@@ -66,6 +71,45 @@ main {
 }
 .accordion-button:not(.collapsed)::after {
   background-image: url("../images/minus.svg");
+}
+
+.navbar > .rounded {
+  border-radius: 24px !important;
+}
+
+.carousel-caption {
+  position: static;
+}
+.carousel-inner {
+  min-height: 310px;
+}
+.carousel-control-next {
+  right: -10vw;
+  min-width: 32px;
+  opacity: 100;
+}
+.carousel-control-next-icon {
+  background-size: 60% 60%;
+}
+.carousel-control-prev {
+  left: -10vw;
+  min-width: 32px;
+  opacity: 100;
+}
+.carousel-control-prev-icon {
+  background-size: 60% 60%;
+}
+.carousel.rounded {
+  border-radius: 24px !important;
+}
+
+@media (max-width: 768px) {
+  .carousel-control-next {
+    display: none;
+  }
+  .carousel-control-prev {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
