--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,8 +10,12 @@ body {
   font-family: "Raleway", Helvetica, sans-serif;
 }
 
-.display-4, .h1, .h2, .h3 {
+.display-4, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Sancreek", sans-serif;
+}
+
+.h2, h2 {
+  font-size: calc(1.8rem + .9vw);
 }
 
 main {
@@ -44,6 +48,7 @@ main {
   --bs-accordion-bg: none;
   --bs-accordion-color: white;
   --bs-accordion-border-color: none;
+  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
 
   &-body {
     border-bottom: rgba(255, 255, 255, 0.2) solid 2px;
@@ -73,5 +78,51 @@ main {
     &:not(.collapsed)::after {
       background-image: url('../images/minus.svg');
     }
+  }
+}
+
+.navbar > .rounded {
+  border-radius: 24px !important;
+}
+
+.carousel {
+  &-caption {
+    position: static;
+  }
+
+  &-inner {
+    min-height: 310px;
+  }
+
+  &-control-next {
+    right: -10vw;
+    min-width: 32px;
+    opacity: 100;
+    &-icon {
+      background-size: 60% 60%;
+    }
+  }
+
+  &-control-prev {
+    left: -10vw;
+    min-width: 32px;
+    opacity: 100;
+    &-icon {
+      background-size: 60% 60%;
+    }
+  }
+
+  &.rounded {
+    border-radius: 24px !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .carousel-control-next {
+    display: none;
+  }
+
+  .carousel-control-prev {
+    display: none;
   }
 }
