JS animation and style fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ main {
   position: static;
 }
 .carousel-inner {
-  min-height: 310px;
+  min-height: 220px;
 }
 .carousel-control-next {
   right: -10vw;
@@ -110,6 +110,16 @@ main {
   .carousel-control-prev {
     display: none;
   }
+}
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /*# sourceMappingURL=style.css.map */
