--- a/styles/style.scss
+++ b/styles/style.scss
@@ -91,7 +91,7 @@ main {
   }
 
   &-inner {
-    min-height: 310px;
+    min-height: 220px;
   }
 
   &-control-next {
@@ -125,4 +125,15 @@ main {
   .carousel-control-prev {
     display: none;
   }
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
 }
