--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   --bs-dark-rgb: 18, 16, 12;
   --bs-secondary-rgb: 42, 39, 34;
   --bs-link-color: 18, 16, 12;
+  --bs-body-bg: #FFF4EB;
 }
 
 body {
@@ -120,6 +121,28 @@ main {
 .fade-in.show {
   opacity: 1;
   transform: translateY(0);
+}
+
+.modal-header, .modal-footer {
+  border: none;
+}
+.modal-content {
+  overflow: hidden;
+}
+
+.figure-1 {
+  right: -50px;
+  bottom: -50px;
+  transform: scaleX(-1);
+}
+
+.figure-2 {
+  left: -50px;
+  bottom: -50px;
+}
+
+.form-control {
+  background-color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
